# zoomcamp-wsl-ubuntu

./: .gitignore
000_UpAndRunning/: Dockerfile  README.md
000_UpAndRunning/pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  notebook.ipynb  pyproject.toml
000_UpAndRunning/sql_refresher/: Dockerfile  docker-compose.yaml  ingest_zone_data.py  main.py  pyproject.toml  zones.ipynb
001_Postgres_Docker/module_01_hw/: Dockerfile  README.md  Untitled.ipynb  ingest_green_taxi_data.py  main.py  module1_taxi_hw.ipynb  pyproject.toml
001_Postgres_Docker/terraform/: main.tf  variables.tf
002_Workflow_w_Kestra/: 04_postgres_taxi.yaml  05_postgres_taxi_scheduled.yaml  06_gcp_kestra_kv.yaml  07_gcp_setup.yaml  08_gcp_taxi.yaml
002_Workflow_w_Kestra/module_02_hw/: README.md
003_Data_Warehouse/: 01_big_query.sql  02_BQ_ML.sql
003_Data_Warehouse/module_03_hw/: README.md  m3_hw_bq.sql
004_Analytics_Engineering/module_04_hw/: README.md
004_Analytics_Engineering/taxi_rides_ny/: dbt_project.yml  ingest_fhv.py  taxi_rides_ny.duckdb.wal
005_Data_Platforms/module_05_hw/: README.md
006_Batch_Processing/: main.py  pyproject.toml
006_Batch_Processing/code/: 03_test.ipynb  04_pyspark.ipynb  05_taxi_schema.ipynb  06_spark_sql.ipynb  07_groupby_join.ipynb  09_spark_gcs.ipynb  download_data.sh  schema_refactor.py  schema_taxi.py
006_Batch_Processing/module_06_hw/: README.md  module_06_hw.ipynb
007_Streaming/workshop/: docker-compose.yaml  pyproject.toml
008_Course_Project/gcp_pipeline/: 01_gcp_kestra_kv.yaml  02_gcp_setup.yaml  03_gcp_data_ingestion.yaml  (+2 more)
(+44 files in other folders)
