[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "pgcli>=4.4.0",
    "psycopg[binary]>=3.3.2",
    "pyarrow>=22.0.0",
]

[dependency-groups]
dev = [
    "pgcli>=4.4.0",
]
